# Ares-archived

./: .gitignore  .gitmodules  Antares.sln  Antares.vcxproj  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml  pr-build-comment.yml
scripts/: build_debug.bat  build_release.bat  clean.bat
src/: Ares.GlobalControls.cpp  Ares.version.h  ver.rc
src/Commands/: Commands.cpp
src/Ext/AnimType/: Body.h
src/Ext/BuildingType/: Body.h
src/Ext/Bullet/: Hooks.cpp
src/Ext/BulletType/: Body.h
src/Ext/Campaign/: Body.h
src/Ext/House/: Body.h
src/Ext/HouseType/: Body.h
src/Ext/Rules/: Body.h
src/Ext/SWType/: Body.h
src/Ext/Side/: Body.h
src/Ext/TAction/: Body.h
src/Ext/TEvent/: Body.h
src/Ext/TechnoType/: Body.h
src/Ext/Tiberium/: Body.h
src/Ext/WarheadType/: Body.h
src/Ext/WeaponType/: Body.h
src/Misc/: IniIteratorChar.cpp  Interface.cpp  SavegameDef.h
